--- a/analysis notebooks/Reduce-4U.ipynb
+++ b/analysis notebooks/Reduce-4U.ipynb
@@ -121,8 +121,10 @@
         }
       ], 
       "source": [
+        "# point this to wherever the IXPE Calb files are located\n",
         "CALB_DIR='/home/idies/workspace/Storage/dgonzalez/persistent/ixpesw-ixpeobssim-8253fe2836b8_v23_3_0/ixpeobssim/caldb'\n", 
         "OBSID='01003299'\n", 
+        "# point this to wherever the IXPE data files are located -- this is on sciserver.org\n",
         "datafile='/home/idies/workspace/headata/FTP/ixpe/data/obs/%s/%s/event_l2/ixpe%s_det?_evt2_v02.fits.gz' % (OBSID[0:2],OBSID,OBSID)\n", 
         "#datafile='/home/idies/workspace/Temporary/heyl/scratch/1RXS/01003199/event_l2/*1.fits.gz'\n", 
         "#for i,f in enumerate(sorted(glob('01003299/event_l2/ixpe01003299_det?_evt2_v02_geocenter.fits.gz'))):\n", 
