--- a/analysis notebooks/Reduce-4U.ipynb
+++ b/analysis notebooks/Reduce-4U.ipynb
@@ -121,14 +121,14 @@
         }
       ], 
       "source": [
-        "# point this to wherever the IXPE Calb files are located\n",
-        "CALB_DIR='/home/idies/workspace/Storage/dgonzalez/persistent/ixpesw-ixpeobssim-8253fe2836b8_v23_3_0/ixpeobssim/caldb'\n", 
+        "# point this to wherever the IXPE Calb files are located -- this is on sciserver.org\n",
+        "CALB_DIR='/home/idies/workspace/headata/FTP/caldb/data'\n", 
         "OBSID='01003299'\n", 
         "# point this to wherever the IXPE data files are located -- this is on sciserver.org\n",
         "datafile='/home/idies/workspace/headata/FTP/ixpe/data/obs/%s/%s/event_l2/ixpe%s_det?_evt2_v02.fits.gz' % (OBSID[0:2],OBSID,OBSID)\n", 
         "for i,f in enumerate(sorted(glob(datafile))): \n", 
         "    print(i,f)\n", 
-        "    with fits.open('%s/ixpe/gpd/cpf/modfact/ixpe_d%d_obssim_mfact_v010.fits' % (CALB_DIR,i+1)) as hdu:\n", 
+        "    with fits.open('%s/ixpe/gpd/cpf/modfact/ixpe_d%d_20170101_mfact_02.fits' % (CALB_DIR,i+1)) as hdu:\n", 
         "        modf=hdu[1].data\n", 
         "        modlist=np.array([m[2] for m in modf])\n", 
         "    with fits.open(f) as hdu:\n", 
