--- a/analysis notebooks/Reduce-4U.ipynb
+++ b/analysis notebooks/Reduce-4U.ipynb
@@ -530,7 +530,7 @@
         }
       ], 
       "source": [
-        "phdata=np.mod(deltat*(respow.x[0]+_dt*respow.x[1]*0.5),1)\n", 
+        "phdata=np.mod(deltat*(respow.x[0]+delta*respow.x[1]*0.5),1)\n", 
         "toton=plt.hist(phdata,bins=100)\n", 
         "print((toton[0].max()-toton[0].min())/(toton[0].max()+toton[0].min()))"
       ], 
